--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boundless</title>
+    <title>Boundless - Invoice Creator</title>
+    <link rel="icon" type="image/png" href="./public/fav.ico">
   </head>
   <body>
     <div id="root"></div>
